<resources>
    <string name="app_name">My Habits</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="add_habit">Add habit</string>
    <string name="edit_habit">Edit habit</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="habit_name">Name</string>
    <string name="habit_color">Color</string>
    <string name="question">Question</string>
    <string name="example_question">e.g. How many pages of the book?</string>
    <string name="example_name">e.g. Read book</string>
    <string name="unit">Unit</string>
    <string name="example_unit">e.g. pages</string>
    <string name="example_target">e.g. 15</string>
    <string name="target">Target</string>
    <string name="frequency">Frequency</string>
    <string name="column">Column</string>
    <string name="example_column">e.g. 5</string>
    <string name="value_1">Value 1</string>
    <string name="example_value">e.g. page</string>
</resources>